# neutron-vpnaas-dashboard

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  manage.py  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
deliverables/pike/: neutron-vpnaas-dashboard.yaml
deliverables/queens/: neutron-vpnaas-dashboard.yaml
devstack/: README.rst  plugin.sh  settings
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: index.rst
doc/source/install/: index.rst
neutron_vpnaas_dashboard/: version.py
neutron_vpnaas_dashboard/api/: vpn.py
neutron_vpnaas_dashboard/dashboards/project/: forms.py  tables.py  tabs.py  tests.py  urls.py  views.py  workflows.py
neutron_vpnaas_dashboard/dashboards/project/vpn/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py  workflows.py
neutron_vpnaas_dashboard/enabled/: _1470_project_vpn_panel.py
neutron_vpnaas_dashboard/locale/cs/LC_MESSAGES/: django.po
neutron_vpnaas_dashboard/test/: helpers.py  settings.py
neutron_vpnaas_dashboard/test/api_tests/: test_vpnaas.py  vpnaas_tests.py
neutron_vpnaas_dashboard/test/test_data/: utils.py  vpnaas_data.py
releasenotes/notes/: add-aggressive-negotiation-mode-ad665f5cfda2e08b.yaml  add-more-formats-to-ipsec-site-connection-e105363b9125b1ed.yaml  additional-ciphers-3f04113ae14a8f0d.yaml  auth-algorithm-fbfe0831ab8dc346.yaml  django2-support-ef2f2bd52a8bb63f.yaml  drop-py-2-7-bfbdac2889ac051a.yaml  endpoint-group-3bb4083130952d17.yaml  split-out-from-horizon-4807f953d5dc0799.yaml
releasenotes/source/: conf.py  index.rst
tools/: tox_install.sh
(+44 files in other folders)
